# PowerCheck

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.tariff_research/: README.md  duke_index_no_jur.html  duke_psc_filing.txt  duke_rate_index.html  fpl_2024.txt  fpl_2025.txt  fpl_howto_bill.txt  fpl_pdfs.txt  fpl_section8.txt  fpu_electric_tariff.txt  fpu_recovery_rates_2026_p1.txt  fpu_rs_section_74064.txt  fpu_rs_section_75688.txt  fpu_sheet_7.021_101985.txt  fpu_sheet_7.021_102033.txt  fpu_sheet_7.021_111551.txt  fpu_sheet_7.021_111607.txt  fpu_sheet_7.021_79331.txt  fpu_sheet_7.021_85372.txt  fpu_sheet_7.021_97398.txt  fpu_sheet_7.021_97884.txt  fpu_sheet_7.021_97932.txt  fpu_sheet_7.022_113538.txt  fpu_sheet_7.022_113594.txt  fpu_sheet_7.023_115742.txt  fpu_sheet_7.024_118789.txt  fpu_standard_offer_p1.txt  fpu_standard_offer_p2.txt  fpu_standard_offer_p3.txt  fpu_tariffs.html  psc_electric_tariffs.html  teco_2026.txt
src/tariff_audit/: __init__.py  __main__.py  cli.py
src/tariff_audit/engine/: __init__.py  bill_composer.py  calculator.py  line_items.py
src/tariff_audit/parsers/: __init__.py  base.py  bill_layouts.py  csv_import.py  detector.py  fpl.py
src/tariff_audit/resolution/: __init__.py  contact_info.py  dispute_process.py  forms.py
src/tariff_audit/standards/: __init__.py  billing_mechanics.py  fac_25_6.py  fac_25_6_verbatim.py  jurisdictions.py  taxes.py
src/tariff_audit/tariffs/: __init__.py  models.py  registry.py
src/tariff_audit/tariffs/duke/: __init__.py  rs1.py
src/tariff_audit/tariffs/fpl/: __init__.py  rs1.py
src/tariff_audit/tariffs/fpu/: __init__.py  rs.py
tests/test_engine/: test_bill_composer.py  test_line_items.py
tests/test_parsers/: test_bill_layouts.py  test_csv_and_detector.py  test_fpl_parser.py
tests/test_parsers/fixtures/: fpl_sample_bill.py
tests/test_resolution/: test_resolution.py
tests/test_standards/: test_billing_mechanics.py  test_fac_25_6.py  test_fac_verbatim.py  test_jurisdictions.py  test_taxes.py
tests/test_tariffs/: test_fpl_rs1.py  test_fpu_rs.py  test_models_and_registry.py  test_teco_rs.py  test_unverified_utilities_raise.py
(+3 files in other folders)
